update some style and content

--- a/_posts/2015-06-26-dian-ina.md
+++ b/_posts/2015-06-26-dian-ina.md
@@ -2,8 +2,8 @@
 layout: post
 title: Dian Ina
 excerpt:
-        <a href="/images/people/dianina/dian_ina_guggenheim.jpg"><img src="/images/people/dianina/dian_ina_guggenheim.jpg" alt="Dian Ina" width="600" height="450" class="alignnone size-full wp-image-173" /></a>
-        Art Manager di <a href="http://www.salihara.org/">Galeri Salihara</a>
+        <a href="/images/people/dianina/dian_ina_guggenheim.jpg"><img src="/images/people/dianina/dian_ina_guggenheim.jpg" alt="Dian Ina"/></a>
+        <h5>Art Manager di <a href="http://www.salihara.org/">Galeri Salihara</a></h5>
 
 tags:
 - seni
@@ -15,7 +15,7 @@ permalink: /dian-ina/
 ---
 
 <a href="/images/people/dianina/dian_ina_guggenheim.jpg"><img src="/images/people/dianina/dian_ina_guggenheim.jpg" alt="Dian Ina" width="600" height="450" class="alignnone size-full wp-image-173" /></a>
-Art Manager di <a href="http://www.salihara.org/">Galeri Salihara</a>
+
 <!--more-->
 
 <h3>Siapa anda dan apa yang anda lakukan?</h3>
@@ -39,4 +39,4 @@ Dompet kulit berbentuk babi warna burgundy untuk menyimpan charger iPhone, Dompe
 
 <h3>Smartphone homescreen</h3>
 
-<a href="/images/people/dianina/photo_2015-06-24_18-43-15.jpg"><img src="/images/people/dianina/photo_2015-06-24_18-43-15.jpg" alt="Dian Ina Homescreen" width="640" height="960" class="alignnone size-full wp-image-172" /></a>
+<a href="/images/people/dianina/photo_2015-06-24_18-43-15.jpg"><img src="/images/people/dianina/photo_2015-06-24_18-43-15.jpg" alt="Dian Ina Homescreen" /></a>
