change heavily on styles, add Ario Pratomo

--- a/_posts/2015-06-26-dian-ina.md
+++ b/_posts/2015-06-26-dian-ina.md
@@ -14,28 +14,30 @@ permalink: /dian-ina/
 
 ---
 
-<a href="/images/people/dianina/dian_ina_guggenheim.jpg"><img src="/images/people/dianina/dian_ina_guggenheim.jpg" alt="Dian Ina" width="600" height="450" class="alignnone size-full wp-image-173" /></a>
+![Dian Ina](/images/people/dianina/dian_ina_guggenheim.jpg)
 
 
-<h3>Siapa anda dan apa yang anda lakukan?</h3>
+### Siapa anda dan apa yang anda lakukan?
+[Dian Ina](https://twitter.com/kemiri), Bekerja mengelola Galeri [Salihara](http://www.salihara.org/), yang merupakan bagian dari Komunitas Salihara; sebuah pusat kesenian swasta di Jakarta. Banyak terlibat untuk perancangan pameran dan program seni rupa untuk publik. Di waktu luang menjadi [Mozilla Reps](https://reps.mozilla.org/), volunteer untuk community building dan community engagement proyek-proyek [Mozilla](https://www.mozilla.org/) di Indonesia. Sering bosan berada di tempat yang sama dalam jangka waktu yang lama, dan biasa melakukan perjalanan sendiri.
 
-<a href="https://twitter.com/kemiri">Dian Ina</a>, Bekerja mengelola Galeri <a href="http://www.salihara.org/">Salihara</a>, yang merupakan bagian dari Komunitas Salihara; sebuah pusat kesenian swasta di Jakarta. Banyak terlibat untuk perancangan pameran dan program seni rupa untuk publik. Di waktu luang menjadi <a href="https://reps.mozilla.org/">Mozilla Reps</a>, volunteer untuk community building dan community engagement proyek-proyek <a href="https://www.mozilla.org/">Mozilla</a> di Indonesia. Sering bosan berada di tempat yang sama dalam jangka waktu yang lama, dan biasa melakukan perjalanan sendiri.
+### Hardware yang anda gunakan
+Bekerja dengan [MacBook Air](https://en.wikipedia.org/wiki/MacBook_Air). Pemakai [iPhone 4S](https://en.wikipedia.org/wiki/IPhone_4S) yang beberapa bulan lalu juga mengadopsi [Android](http://android.com) lewat [RedMi 2](https://en.wikipedia.org/wiki/Xiaomi_Mi_2) supaya bisa mengunduh [Firefox](https://www.mozilla.org/en-US/firefox/new/) di ponsel. Pulpen harus [PILOT Hi-Tec-C](http://www.jetpens.com/Pilot-Hi-Tec-C-Gel-Ink-Pens/ct/284) sejak lebih dari 10 tahun lalu. Tahun ini memakai notebooks ukuran A5 yang kertasnya empuk dan covernya berdesain bunga-bunga untuk menulis ide dan membuat catatan belanja. Setia dengan [iPod (RED)](https://www.apple.com/product-red/) untuk mendengarkan musik saat tak ada internet.
 
-<h3>Hardware yang anda gunakan</h3>
+### Software yang anda gunakan
+Peramban menggunakan [Firefox](https://www.mozilla.org/en-US/firefox/new/), Membuat catatan pekerjaan dengan [Evernote](https://evernote.com/), Media Sosial menggunakan [Path](https://path.com/), [Twitter](https://twitter.com/kemiri), [Instagram](https://instagram.com/), [Facebook](https://facebook.com/), [Pinterest](https://www.pinterest.com/), Menyimpan file dengan [Dropbox](https://dropbox.com/), [Google Drive](https://www.google.com/intl/en/drive/), Ngobrol menggunakan [Telegram](https://telegram.org/) dan [Whatsapp](https://www.whatsapp.com/).
 
-Bekerja dengan <a href="https://en.wikipedia.org/wiki/MacBook_Air">MacBook Air</a>. Pemakai <a href="https://en.wikipedia.org/wiki/IPhone_4S">iPhone 4S</a> yang beberapa bulan lalu juga mengadopsi <a href="http://android.com">Android</a> lewat <a href="https://en.wikipedia.org/wiki/Xiaomi_Mi_2">RedMi 2</a> supaya bisa mengunduh <a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a> di ponsel. Pulpen harus <a href="http://www.jetpens.com/Pilot-Hi-Tec-C-Gel-Ink-Pens/ct/284">PILOT Hi-Tec-C</a> sejak lebih dari 10 tahun lalu. Tahun ini memakai notebooks ukuran A5 yang kertasnya empuk dan covernya berdesain bunga-bunga untuk menulis ide dan membuat catatan belanja. Setia dengan <a href="https://www.apple.com/product-red/">iPod (RED)</a> untuk mendengarkan musik saat tak ada internet.
+Untuk pekerjaan sehari-hari di kantor menggunakan Microsoft Word and Microsoft Excel, Piranti lunak terkait Mozilla seperti Bugzilla, Webmaker App (versi Beta), Vidyo, Discourse, Urusan uang dan perbankan dengan KlikBCA, CommBank App, Paypal, Mendengarkan musik dan menonton video saat ada sambungan internet yang bagus dengan [Rdio](http://rdio.com/), iTunes, Youtube.
 
-<h3>Software yang anda gunakan</h3>
-
-Peramban menggunakan <a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a>,  Membuat catatan pekerjaan dengan <a href="https://evernote.com/">Evernote</a>, Media Sosial menggunakan <a href="https://path.com/">Path</a>, <a href="https://twitter.com/kemiri">Twitter</a>, <a href="https://instagram.com/">Instagram</a>, <a href="https://facebook.com/">Facebook</a>, <a href="https://www.pinterest.com/">Pinterest</a>, Menyimpan file dengan <a href="https://dropbox.com/">Dropbox</a>, <a href="https://www.google.com/intl/en/drive/">Google Drive</a>, Ngobrol menggunakan <a href="https://telegram.org/">Telegram</a> dan <a href="https://www.whatsapp.com/">Whatsapp</a>.
-Untuk pekerjaan sehari-hari di kantor menggunakan Microsoft Word and Microsoft Excel, Piranti lunak terkait Mozilla seperti Bugzilla, Webmaker App (versi Beta), Vidyo, Discourse, Urusan uang dan perbankan dengan KlikBCA, CommBank App, Paypal, Mendengarkan musik dan menonton video saat ada sambungan internet yang bagus dengan <a href="http://rdio.com/">Rdio</a>, iTunes, Youtube.
 Transportasi menggunakan Uber, Google Maps, Juga sering memakai Compass (karena tidak paham arah-arah) dan Weather (supaya kostum hari itu sesuai cuaca) di iPhone.
 
-<h3>Apa isi tas anda</h3>
+### Apa isi tas anda
 
-Backpack <a href="http://herschelsupply.com/">Herschel</a> Woodside Knitted Collection warna Navy, berisi: MacbookAir 13, iPhone 4S, Redmi 2, Pouch kanvas warna hitam dari pameran Shirin Neshat di MMCA, Seoul--berisi Token e-banking, Pulpen PILOT Hi-Tec-C, dan flash disk.
-Dompet kulit berbentuk babi warna burgundy untuk menyimpan charger iPhone, Dompet Felt Scandinavian Touch untuk menyimpan uang kertas dan logam. Dompet kulit dengan aksen tenun Bife (NTT) untuk menyimpan kartu-kartu (ATM, Commuter Line, Flazz, SIM, NPWP dll). Beaded pouch warna merah tua untuk menyimpan iPod dan earphone. Kipas sutra motif batik berciri oriental warna kelabu, Scarf untuk kalau-kalau naik ojek, Satu kemasan tisu kering, Kartu akses masuk tower apartemen (yang sering ketinggalan), Kartu akses kantor, Face blotting paper, Lip balm, 2 Macam lipstick cair berbeda warna; pink glossy dan merah matte. Permen Fisherman's Friends, Buku yang sedang dibaca
+Backpack [Herschel](http://herschelsupply.com/) Woodside Knitted Collection warna Navy, berisi: MacbookAir 13, iPhone 4S, Redmi 2, Pouch kanvas warna hitam dari pameran Shirin Neshat di MMCA, Seoul--berisi Token e-banking, Pulpen PILOT Hi-Tec-C, dan flash disk.
 
-<h3>Smartphone homescreen</h3>
+Dompet kulit berbentuk babi warna burgundy untuk menyimpan charger iPhone, Dompet Felt Scandinavian Touch untuk menyimpan uang kertas dan logam. Dompet kulit dengan aksen tenun Bife (NTT) untuk menyimpan kartu-kartu (ATM, Commuter Line, Flazz, SIM, NPWP dll). 
 
-<a href="/images/people/dianina/photo_2015-06-24_18-43-15.jpg"><img src="/images/people/dianina/photo_2015-06-24_18-43-15.jpg" alt="Dian Ina Homescreen" /></a>
+Beaded pouch warna merah tua untuk menyimpan iPod dan earphone. Kipas sutra motif batik berciri oriental warna kelabu, Scarf untuk kalau-kalau naik ojek, Satu kemasan tisu kering, Kartu akses masuk tower apartemen (yang sering ketinggalan), Kartu akses kantor, Face blotting paper, Lip balm, 2 Macam lipstick cair berbeda warna; pink glossy dan merah matte.    
+Permen Fisherman's Friends, Buku yang sedang dibaca
+
+### Smartphone homescreen
+![Dian Ina Homescreen](/images/people/dianina/photo_2015-06-24_18-43-15.jpg)
