add desc and also feed xml

--- a/_posts/2015-06-26-dian-ina.md
+++ b/_posts/2015-06-26-dian-ina.md
@@ -1,10 +1,9 @@
 ---
 layout: post
 title: Dian Ina
-excerpt:
-        <a href="/images/people/dianina/dian_ina_guggenheim.jpg"><img src="/images/people/dianina/dian_ina_guggenheim.jpg" alt="Dian Ina"/></a>
-        <h5>Art Manager di <a href="http://www.salihara.org/">Galeri Salihara</a></h5>
-
+excerpt: Art Manager di <a href="http://www.salihara.org/">Galeri Salihara</a>
+desc: "Art Manager di Komunitas Galeri Salihara"
+image: '/images/people/dianina/dian_ina_guggenheim.jpg'
 tags:
 - seni
 - blogger
